test/types/cptr/const/c_ptrToBlock.good
c_ptrToBlock.chpl:5: error: Only single-locale rectangular arrays support c_ptrToConst() at present
